<resources>
    <string name="KEY_VIEW_MODEL">KEY_VIEW_MODEL</string>
    <string name="ONE_ID_CLIENT_ID">DTCI-DISNEYPLUS.GC.ANDTV-PROD</string>
    <string name="a11y_acceptable_credit_cards">ns_accessibility_acceptable_credit_cards</string>
    <string name="a11y_account_pageload">ns_accessibility_account_pageload</string>
    <string name="a11y_account_settings_email">ns_accessibility_account_settings_email</string>
    <string name="a11y_account_settings_password">ns_accessibility_account_settings_password</string>
    <string name="a11y_addprofile_pageload">ns_accessibility_addprofile_pageload</string>
    <string name="a11y_alert_verifyaccount_button">ns_accessibility_alert_verifyaccount_button</string>
    <string name="a11y_alert_verifyaccount_pageload">ns_accessibility_alert_verifyaccount_pageload</string>
    <string name="a11y_appdownloaddone_help">ns_accessibility_appdownloaddone_help</string>
    <string name="a11y_appdownloaddone_logout">ns_accessibility_appdownloaddone_logout</string>
    <string name="a11y_appdownloaddone_manageaccount">ns_accessibility_appdownloaddone_manageaccount</string>
    <string name="a11y_appdownloaddone_openapp">ns_accessibility_appdownloaddone_openapp</string>
    <string name="a11y_billing_confirm">ns_accessibility_billing_confirm</string>
    <string name="a11y_billing_creditcard_cvv">ns_accessibility_billing_creditcard_cvv</string>
    <string name="a11y_billing_creditcard_cvvhelptip">ns_accessibility_billing_creditcard_cvvhelptip</string>
    <string name="a11y_billing_creditcard_expdate">ns_accessibility_billing_creditcard_expdate</string>
    <string name="a11y_billing_creditcard_expmonth">ns_accessibility_billing_creditcard_expmonth</string>
    <string name="a11y_billing_creditcard_expyear">ns_accessibility_billing_creditcard_expyear</string>
    <string name="a11y_billing_creditcard_name">ns_accessibility_billing_creditcard_name</string>
    <string name="a11y_billing_creditcard_number">ns_accessibility_billing_creditcard_number</string>
    <string name="a11y_billing_creditcard_postalcode">ns_accessibility_billing_creditcard_postalcode</string>
    <string name="a11y_billing_creditcard_zipcode">ns_accessibility_billing_creditcard_zipcode</string>
    <string name="a11y_billing_cvv_tooltip">ns_accessibility_billing_cvv_tooltip</string>
    <string name="a11y_billing_edit_pageload">ns_accessibility_billing_edit_pageload</string>
    <string name="a11y_billing_ideal_banklist">ns_accessibility_billing_ideal_banklist</string>
    <string name="a11y_billing_ideal_selectbank">ns_accessibility_billing_ideal_selectbank</string>
    <string name="a11y_billing_paypalsubmit">ns_accessibility_billing_paypalsubmit</string>
    <string name="a11y_billing_stored_pageload">ns_accessibility_billing_stored_pageload</string>
    <string name="a11y_billing_tab_creditcard">ns_accessibility_billing_tab_creditcard</string>
    <string name="a11y_billing_tab_disneyrewards">ns_accessibility_billing_tab_disneyrewards</string>
    <string name="a11y_billing_tab_ideal">ns_accessibility_billing_tab_ideal</string>
    <string name="a11y_billing_tab_paypal">ns_accessibility_billing_tab_paypal</string>
    <string name="a11y_brandlanding_pageload">ns_accessibility_brandlanding_pageload</string>
    <string name="a11y_brandtile_interact">ns_accessibility_brandtile_interact</string>
    <string name="a11y_btn_back">ns_accessibility_btn_back</string>
    <string name="a11y_btn_change_payment_method">ns_accessibility_btn_change_payment_method</string>
    <string name="a11y_btn_done">ns_accessibility_btn_done</string>
    <string name="a11y_btn_selected">ns_accessibility_btn_selected</string>
    <string name="a11y_cdnav_focus">ns_accessibility_cdnav_focus</string>
    <string name="a11y_cdnav_home">ns_accessibility_cdnav_home</string>
    <string name="a11y_cdnav_home_description">ns_accessibility_cdnav_home_description</string>
    <string name="a11y_cdnav_movies">ns_accessibility_cdnav_movies</string>
    <string name="a11y_cdnav_movies_description">ns_accessibility_cdnav_movies_description</string>
    <string name="a11y_cdnav_number">ns_accessibility_cdnav_number</string>
    <string name="a11y_cdnav_originals">ns_accessibility_cdnav_originals</string>
    <string name="a11y_cdnav_originals_description">ns_accessibility_cdnav_originals_description</string>
    <string name="a11y_cdnav_pageload">ns_accessibility_cdnav_pageload</string>
    <string name="a11y_cdnav_profile">ns_accessibility_cdnav_profile</string>
    <string name="a11y_cdnav_profile_description">ns_accessibility_cdnav_profile_description</string>
    <string name="a11y_cdnav_rightnav">ns_accessibility_cdnav_rightnav</string>
    <string name="a11y_cdnav_search">ns_accessibility_cdnav_search</string>
    <string name="a11y_cdnav_search_description">ns_accessibility_cdnav_search_description</string>
    <string name="a11y_cdnav_selected">ns_accessibility_cdnav_selected</string>
    <string name="a11y_cdnav_series">ns_accessibility_cdnav_series</string>
    <string name="a11y_cdnav_series_description">ns_accessibility_cdnav_series_description</string>
    <string name="a11y_cdnav_settings">ns_accessibility_cdnav_settings</string>
    <string name="a11y_cdnav_settings_description">ns_accessibility_cdnav_settings_description</string>
    <string name="a11y_cdnav_watchlist">ns_accessibility_cdnav_watchlist</string>
    <string name="a11y_cdnav_watchlist_description">ns_accessibility_cdnav_watchlist_description</string>
    <string name="a11y_cdsearch_autocomplete_downnav">ns_accessibility_cdsearch_autocomplete_downnav</string>
    <string name="a11y_cdsearch_backspace">ns_accessibility_cdsearch_backspace</string>
    <string name="a11y_cdsearch_functions_downnav_explore">ns_accessibility_cdsearch_functions_downnav_explore</string>
    <string name="a11y_cdsearch_functions_downnav_results">ns_accessibility_cdsearch_functions_downnav_results</string>
    <string name="a11y_cdsearch_functions_upnav_keyboard">ns_accessibility_cdsearch_functions_upnav_keyboard</string>
    <string name="a11y_cdsearch_keyboard">ns_accessibility_cdsearch_keyboard</string>
    <string name="a11y_cdsearch_letters">ns_accessibility_cdsearch_letters</string>
    <string name="a11y_cdsearch_letters_downnav">ns_accessibility_cdsearch_letters_downnav</string>
    <string name="a11y_cdsearch_letters_upnav_autocomplete">ns_accessibility_cdsearch_letters_upnav_autocomplete</string>
    <string name="a11y_cdsearch_noresults">ns_accessibility_cdsearch_noresults</string>
    <string name="a11y_cdsearch_numbers">ns_accessibility_cdsearch_numbers</string>
    <string name="a11y_cdsearch_pageload">ns_accessibility_cdsearch_pageload</string>
    <string name="a11y_cdsearch_results_details">ns_accessibility_cdsearch_results_details</string>
    <string name="a11y_cdsearch_results_pageload">ns_accessibility_cdsearch_results_pageload</string>
    <string name="a11y_cdsearch_results_upnav">ns_accessibility_cdsearch_results_upnav</string>
    <string name="a11y_cdsearch_space">ns_accessibility_cdsearch_space</string>
    <string name="a11y_cdsearch_switch">ns_accessibility_cdsearch_switch</string>
    <string name="a11y_cdsearch_switch_alpha">ns_accessibility_cdsearch_switch_alpha</string>
    <string name="a11y_cdsearch_switch_numeric">ns_accessibility_cdsearch_switch_numeric</string>
    <string name="a11y_cdsettings_account">ns_accessibility_cdsettings_account</string>
    <string name="a11y_cdsettings_help">ns_accessibility_cdsettings_help</string>
    <string name="a11y_cdsettings_legalcenter">ns_accessibility_cdsettings_legalcenter</string>
    <string name="a11y_cdsettings_logout">ns_accessibility_cdsettings_logout</string>
    <string name="a11y_cdsettings_pcon">ns_accessibility_cdsettings_pcon</string>
    <string name="a11y_checkbox_hint">ns_accessibility_checkbox_hint</string>
    <string name="a11y_checkbox_value_checked">ns_accessibility_checkbox_value_checked</string>
    <string name="a11y_checkbox_value_unchecked">ns_accessibility_checkbox_value_unchecked</string>
    <string name="a11y_closedcaption">ns_accessibility_closedcaption</string>
    <string name="a11y_collapse_btn">ns_accessibility_collapse_btn</string>
    <string name="a11y_collection_pageload">ns_accessibility_collection_pageload</string>
    <string name="a11y_completepurchase_cta">ns_accessibility_completepurchase_cta</string>
    <string name="a11y_completepurchase_logout">ns_accessibility_completepurchase_logout</string>
    <string name="a11y_content_landing_category_selected">ns_accessibility_content_landing_category_selected</string>
    <string name="a11y_content_landing_category_viewing">ns_accessibility_content_landing_category_viewing</string>
    <string name="a11y_contentlanding_content_upnav">ns_accessibility_contentlanding_content_upnav</string>
    <string name="a11y_contentlanding_grid">ns_accessibility_contentlanding_grid</string>
    <string name="a11y_contentlanding_pageload">ns_accessibility_contentlanding_pageload</string>
    <string name="a11y_contentlanding_tabs">ns_accessibility_contentlanding_tabs</string>
    <string name="a11y_contentlanding_tabs_downnav">ns_accessibility_contentlanding_tabs_downnav</string>
    <string name="a11y_contenttile">ns_accessibility_contenttile</string>
    <string name="a11y_contenttile_episode">ns_accessibility_contenttile_episode</string>
    <string name="a11y_contenttile_interact">ns_accessibility_contenttile_interact</string>
    <string name="a11y_continue_btn">ns_accessibility_continue_btn</string>
    <string name="a11y_continuewatching_episode">ns_accessibility_continuewatching_episode</string>
    <string name="a11y_continuewatching_movie">ns_accessibility_continuewatching_movie</string>
    <string name="a11y_continuewatching_newepisode">ns_accessibility_continuewatching_newepisode</string>
    <string name="a11y_createprofiles_addprofile">ns_accessibility_createprofiles_addprofile</string>
    <string name="a11y_createprofiles_pcon">ns_accessibility_createprofiles_pcon</string>
    <string name="a11y_createprofiles_profilename">ns_accessibility_createprofiles_profilename</string>
    <string name="a11y_existingoneid_password">ns_accessibility_existingoneid_password</string>
    <string name="a11y_image_disneyaccount">ns_accessibility_image_disneyaccount</string>
    <string name="a11y_onboardingpw_text_password">ns_accessibility_onboardingpw_text_password</string>
    <string name="account_change_password_header">ns_application_account_change_password_header</string>
    <string name="account_password_placeholder">ns_application_account_password_placeholder</string>
    <string name="btn_hide_pw">ns_application_btn_hide_pw</string>
    <string name="btn_logout">ns_application_btn_logout</string>
    <string name="btn_show_pw">ns_application_btn_show_pw</string>
    <string name="btn_signup">ns_application_btn_signup</string>
    <string name="create_new_password">ns_application_create_new_password</string>
    <string name="create_new_password_subtitle">ns_application_create_new_password_subtitle</string>
    <string name="create_password">ns_application_create_password</string>
    <string name="create_password_title">ns_application_create_password_title</string>
    <string name="enter_new_password">ns_application_enter_new_password</string>
    <string name="enter_your_password">ns_application_enter_your_password</string>
    <string name="forgot_password">ns_application_forgot_password</string>
    <string name="login">ns_application_login</string>
    <string name="password">ns_application_password</string>
    <string name="service_availability">ns_application_service_availability</string>
    <string name="service_unavailable_subtitle">ns_application_service_unavailable_subtitle</string>
    <string name="service_unavailable_title">ns_application_service_unavailable_title</string>
</resources>