<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/resetPwdPinContainer" android:background="?attr/themeBackgroundColor" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.bamtechmedia.dominguez.core.design.widgets.OnboardingToolbar android:id="@+id/resetPwdOnboardingToolbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="1dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.core.widget.NestedScrollView android:id="@+id/resetPwdScrollView" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="@dimen/match_constraints" android:fillViewport="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center_horizontal" android:id="@+id/resetLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/padding_large" android:paddingEnd="@dimen/padding_large">
            <TextView android:textAppearance="@style/Disney.TextAppearance.H2" android:id="@+id/title" android:layout_width="@dimen/match_constraints" android:layout_height="wrap_content" android:layout_marginTop="@dimen/onboarding_logo_margin_bottom" android:text="@string/create_new_password" android:lineSpacingExtra="3sp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <TextView android:textAppearance="@style/Disney.TextAppearance.BodyCopy" android:id="@+id/welcomeMessage" android:layout_width="@dimen/match_constraints" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/create_new_password_subtitle" android:lineSpacingExtra="4sp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <com.bamtechmedia.dominguez.core.design.widgets.textinputlayout.PasswordInputLayout android:id="@+id/passwordInputLayout" android:layout_width="@dimen/match_constraints" android:layout_height="wrap_content" android:layout_marginTop="12dp" app:customHideText="@string/btn_hide_pw" app:customHint="@string/enter_new_password" app:customShowText="@string/btn_show_pw" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <com.bamtechmedia.dominguez.core.design.widgets.LoadingButton android:id="@+id/loginButton" android:layout_width="@dimen/match_constraints" android:layout_height="@dimen/btn_min_height" android:layout_marginTop="@dimen/padding_small" android:layout_marginBottom="@dimen/padding_medium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <ImageView android:id="@+id/disneyLogoAccount" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_extra_small" android:layout_marginBottom="@dimen/reset_password_logo_padding" android:src="0x7f080143" android:contentDescription="@string/a11y_image_disneyaccount" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/loginButton" app:layout_constraintVertical_bias="1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
