<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/changePasswordContainer" android:background="?attr/themeBackgroundColor" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.bamtechmedia.dominguez.core.design.widgets.OnboardingToolbar android:id="@+id/changePasswordOnboardingToolbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="1dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.core.widget.NestedScrollView android:id="@+id/changePasswordScrollView" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="@dimen/match_constraints" android:fillViewport="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center_horizontal" android:id="@+id/changePasswordLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/padding_medium" android:paddingEnd="@dimen/padding_medium">
            <TextView android:textAppearance="@style/Disney.TextAppearance.BodyCopy" android:textColor="@color/vader_grey8" android:id="@+id/changePasswordCopy" android:layout_width="@dimen/change_email_text_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_small" android:text="@string/account_change_password_header" android:lineSpacingExtra="4sp" android:layout_marginStart="@dimen/padding_small" android:layout_marginEnd="@dimen/padding_small" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <com.bamtechmedia.dominguez.core.design.widgets.textinputlayout.PasswordInputLayout android:id="@+id/currentPasswordInput" android:layout_width="@dimen/match_constraints" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_medium" android:layout_marginStart="@dimen/padding_small" android:layout_marginEnd="@dimen/padding_small" app:customHideText="@string/btn_hide_pw" app:customHint="@string/account_password_placeholder" app:customShowText="@string/btn_show_pw" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/changePasswordCopy" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <com.bamtechmedia.dominguez.core.design.widgets.textinputlayout.PasswordInputLayout android:id="@+id/newPasswordInput" android:layout_width="@dimen/match_constraints" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_medium" android:layout_marginStart="@dimen/padding_small" android:layout_marginEnd="@dimen/padding_small" app:customHideText="@string/btn_hide_pw" app:customHint="@string/enter_new_password" app:customShowText="@string/btn_show_pw" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/currentPasswordInput" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <FrameLayout android:id="@+id/forgotPasswordButtonLayout" android:layout_width="@dimen/match_constraints" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_medium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/newPasswordInput" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width_outbound">
                <TextView android:theme="@style/Disney.Button.Borderless.Secondary" android:textAppearance="@style/Disney.TextAppearance.BodyCopy" android:id="@+id/forgotPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forgot_password" android:lineSpacingExtra="4sp"/>
            </FrameLayout>
            <ProgressBar android:id="@+id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_medium" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButtonLayout" style="@style/CircularProgressbar"/>
            <ImageView android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/disneyLogoAccount" android:focusable="true" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_small" android:layout_marginBottom="@dimen/padding_large" android:src="0x7f080143" android:contentDescription="@string/a11y_image_disneyaccount" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButtonLayout" app:layout_constraintVertical_bias="1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
