<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/registerAccountContainer" android:background="?attr/themeBackgroundColor" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.bamtechmedia.dominguez.core.design.widgets.OnboardingToolbar android:id="@+id/registerAccountOnboardingToolbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="1dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.core.widget.NestedScrollView android:id="@+id/registerAccountScrollView" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="@dimen/match_constraints" android:fillViewport="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center_horizontal" android:id="@+id/registerAccountLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/padding_large" android:paddingEnd="@dimen/padding_large">
            <TextView android:textAppearance="@style/Disney.TextAppearance.Overline" android:id="@+id/registerSubtitle" android:layout_width="@dimen/match_constraints" android:layout_height="wrap_content" android:text="@string/btn_signup" android:lineSpacingExtra="2sp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <TextView android:id="@+id/registerTitle" android:layout_width="@dimen/match_constraints" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_extra_small" android:text="@string/create_password_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/registerSubtitle" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width" style="@style/Disney.TextView.OnboardingTitle"/>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/registerEmailSubtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_small" app:layout_constraintStart_toStartOf="@+id/registerTitle" app:layout_constraintTop_toBottomOf="@+id/registerTitle">
                <ImageView android:id="@+id/registerEmailCheck" android:layout_width="wrap_content" android:layout_height="24dp" android:src="@drawable/ic_checkmark_grey" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textAppearance="@style/Disney.TextAppearance.BodyCopy" android:textColor="@color/vader_grey8" android:id="@+id/registerEmailTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lineSpacingExtra="4sp" app:layout_constraintBottom_toBottomOf="@+id/registerEmailCheck" app:layout_constraintStart_toEndOf="@+id/registerEmailCheck" app:layout_constraintTop_toTopOf="@+id/registerEmailCheck"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.bamtechmedia.dominguez.core.design.widgets.textinputlayout.PasswordInputLayout android:id="@+id/passwordInputLayout" android:layout_width="@dimen/zeroWidth" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_medium" app:customAccessibilityDescription="@string/a11y_onboardingpw_text_password" app:customHideText="@string/btn_hide_pw" app:customHint="@string/create_password" app:customShowText="@string/btn_show_pw" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/registerEmailSubtitle" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
            <com.bamtechmedia.dominguez.core.design.widgets.LoadingButton android:id="@+id/continueLoadingButton" android:layout_width="@dimen/match_constraints" android:layout_height="@dimen/btn_min_height" android:layout_marginTop="@dimen/padding_large" android:layout_marginBottom="@dimen/padding_small" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" app:layout_constraintWidth_max="@dimen/onboarding_layout_max_width"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
