<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="center" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:gravity="center_horizontal" android:id="@+id/topDisneyLogo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginBottom="9dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="0x7f08014d"/>
    <TextView android:textAppearance="@style/Disney.TextAppearance.BodyCopyHeadline" android:id="@+id/serviceUnavailableLoginButton" android:background="?attr/selectableItemBackground" android:padding="@dimen/padding_medium" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login" android:lineSpacingExtra="4sp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textAppearance="@style/Disney.TextAppearance.BodyCopyHeadline" android:id="@+id/serviceUnavailableLogoutButton" android:background="?attr/selectableItemBackground" android:padding="@dimen/padding_medium" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_logout" android:lineSpacingExtra="4sp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/serviceUnavailableImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="0x7f080290" android:contentDescription="@null" app:layout_constraintBottom_toTopOf="@+id/serviceUnavailableTitle" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2"/>
    <TextView android:textAppearance="@style/Disney.TextAppearance.H3" android:textColor="@color/vader_grey8" android:gravity="center_horizontal" android:id="@+id/serviceUnavailableTitle" android:layout_width="@dimen/no_connection_view_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_medium" android:text="@string/service_unavailable_title" android:lineSpacingExtra="4sp" app:layout_constraintBottom_toTopOf="@+id/serviceUnavailableBody" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/serviceUnavailableImage"/>
    <TextView android:textAppearance="@style/Disney.TextAppearance.BodyCopy" android:textColor="@color/vader_grey8" android:gravity="center_horizontal" android:id="@+id/serviceUnavailableBody" android:layout_width="@dimen/no_connection_view_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_extra_small" android:text="@string/service_unavailable_subtitle" android:lineSpacingExtra="4sp" app:layout_constraintBottom_toTopOf="@+id/serviceUnavailableAvailabilityButton" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/serviceUnavailableTitle"/>
    <TextView android:theme="@style/Disney.Button.Borderless.Secondary" android:textAppearance="@style/Disney.TextAppearance.BodyCopy" android:id="@+id/serviceUnavailableAvailabilityButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_large" android:maxWidth="@dimen/no_connection_view_width" android:text="@string/service_availability" android:lineSpacingExtra="4sp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/serviceUnavailableBody"/>
</androidx.constraintlayout.widget.ConstraintLayout>
